# BalbarOS

./: .gitignore  README.md
balbaros/: CMakeLists.txt  clean.sh  iso.sh  toolchain-i686_64.cmake
balbaros/boot/: boot_sector.asm
balbaros/kernel/: CMakeLists.txt  Makefile  kernel.c
balbaros/kernel/arch/i386/: tty.c  vga.h
balbaros/kernel/arch/x86/: CMakeLists.txt  boot.s
balbaros/kernel/include/kernel/: tty.h
balbaros/kernel/kernel/: kernel.c
balbaros/kernel/linker/: boot_linker.ld
balbaros/libc/: Makefile
balbaros/libc/include/sys/: cdefs.h
balbaros/libc/ssp/: stack_protection.c
balbaros/test/: Makefile
balbaros/test/include/test/: runtests.h
balbaros/test/include/test/ssp/: ssptest.h
balbaros/test/ssp/: ssptest.c
balbaros/test/test/: runtests.c
docs/features/: BOOT.md  C_IMPL.md  OTHER.md  README.md  TESTS.md
scripts/crosscompiler/: README.md  build_crosscompiler.sh
scripts/kernel/: README.md  build.sh  clean.sh  config.sh  headers.sh  iso.sh  qemu.sh
